methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:13: error: not enough arguments for method tourneDroite: (nb: Int)Unit.
Unspecified value parameter nb.
      tourneDroite()
                  ^FlowerPot:17: error: not enough arguments for method tourneDroite: (nb: Int)Unit.
Unspecified value parameter nb.
  tourneDroite()
              ^