methods.flowerpot.FlowerPot.scala.code
def growFlowers()
{
  var listPos:Array[(Int,Int)]=Array((3,6))
  fleur(Color.red)
  
}

def fleur(color:Color)
{
  ligne(color)
  for (i<-1 to 2)
		{
      tourneDroite()
    }
  droite()
  ligne(color)
  tourneDroite()
}



def ligne(color:Color)
{
  var L:Array[Color]=Array(color,Color.yellow)
  for(i<-L)
  	{
      marquer(i)
      avance()
    }
  marquer(color)
}

def tourneDroite(nb:Int)
{
  for (i<-1 to nb)
  	{
    	droite()
  		avance()
    }
}


def marquer(color:Color)
{
  setCouleurBrosse(color)
  baisseBrosse()
  leveBrosse()
}